# inemaengenhariacivil

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  pyproject.toml
agents/budget/: SKILL.md
agents/concrete/: SKILL.md
agents/earthwork/: SKILL.md
agents/foundations/: SKILL.md
agents/loads/: SKILL.md
agents/norms/: SKILL.md
agents/orchestrator/: SKILL.md
agents/pavement/: SKILL.md
agents/report/: SKILL.md
agents/retaining-walls/: SKILL.md
agents/review/: SKILL.md
agents/sewage/: SKILL.md
agents/slope-stability/: SKILL.md
agents/steel/: SKILL.md
agents/water-supply/: SKILL.md
checklists/: rede-hidraulica.json  sapata.json  viga-concreto.json
data/: README.md  sinapi_amostra.csv
docs/: 00-visao-geral.md  01-arquitetura.md  02-estrutura-diretorios.md  03-agentes.md  04-skills.md  05-dependencias.md  06-fases-implementacao.md  07-estrategia-testes.md  08-validacao-calculos.md  09-evolucao-futura.md  10-como-adicionar-agente.md  11-como-adicionar-skill.md  12-como-adicionar-norma.md  13-avaliacao-viabilidade.md  14-catalogo-calculos.md
examples/estaca-spt/: README.md  solution.md
examples/ligacao-parafusada/: README.md  solution.md
examples/muro-arrimo/: README.md  solution.md
examples/orcamento-viga/: README.md  solution.md
examples/pavimento-flexivel/: README.md  solution.md
lib/: service.py
memory/: preferences.yaml
templates/: checklist-revisao.md  laudo-pericial.md  memorial-calculo.md  relatorio-tecnico.md
workflows/: budget-estimate.md  concrete-beam.md  pile-foundation.md  water-network.md
(+108 files in other folders)
