[project]
name = "inema-engenharia-civil"
version = "0.1.0"
description = "Plataforma de agentes de IA para cálculos de engenharia civil"
requires-python = ">=3.11"

[project.dependencies]
numpy = ">=1.26"
scipy = ">=1.12"
sympy = ">=1.12"
pint = ">=0.23"
openpyxl = ">=3.1"
reportlab = ">=4.0"
matplotlib = ">=3.8"
pandas = ">=2.1"
pydantic = ">=2.5"
mcp = ">=1.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
